[gd_scene load_steps=2 format=2]

[ext_resource path="res://examples/rigid_body_3d/main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 125.0
margin_bottom = 83.0
custom_constants/separation = 10

[node name="ServerButton" type="Button" parent="VBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
text = "Server"

[node name="ClientButton" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 100.0
margin_bottom = 50.0
text = "Client"

[node name="DisconnectButton" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 80.0
text = "Disconnect"

[node name="Status" type="Label" parent="."]
margin_left = 150.0
margin_top = 25.0
margin_right = 250.0
margin_bottom = 50.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 10 )
[connection signal="pressed" from="VBoxContainer/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
